navigation var complete

--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <!-- nav section starts -->
+        <nav>
+            <div class="travel-name-container">
+                <img src="./Images/Group40071(2).png" alt="">
+                <h3>Awesome <span class="travel-name-color">Travel</span></h3>
+            </div>
+            <div class="menu-item-container">
+                <a href="#"><span class="menu-color">Home</span></a>
+                <a href="">Packages</a>
+                <a href="">Testimonial</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
+            </div>
+        </nav>
+        <div class="header-banner-container gradiant">
+            <div class="banner-text">
+                <h1>Explore Your Travel</h1>
+                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et <br> odio enim ac quis sapien urna eu phasellus.</p>
+            </div>
+            <div class="banner-btn-item">
+                <input placeholder="Where go" type="text" name="" id="">
+                <select placeholder="When" name="" id=""></select>
+                <select name="" id=""></select>
+                <div class="button">
+                    <img src="./Images/icons8-.png" alt="">
+                <button type="button">Find Now</button>
+                </div>
+                
+            </div>
+        </div>
+        <!-- nav section end -->
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>    
 </body>
 </html>
