added tours section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <!-- nav section starts -->
@@ -25,26 +27,57 @@
         <div class="header-banner-container gradiant">
             <div class="banner-text">
                 <h1>Explore Your Travel</h1>
-                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et <br> odio enim ac quis sapien urna eu phasellus.</p>
+                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et <br> odio enim
+                    ac quis sapien urna eu phasellus.</p>
             </div>
             <div class="banner-btn-item">
                 <input placeholder="Where go" type="text" name="" id="">
-                <select placeholder="When" name="" id=""></select>
-                <select name="" id=""></select>
-                <div class="button">
-                    <img src="./Images/icons8-.png" alt="">
-                <button type="button">Find Now</button>
+                <div class="select-type">
+                    <input placeholder="When" type="text">
+                    <img src="./Images/icons8-down-arrow-24.png" alt="">
                 </div>
-                
+                <div class="select-type">
+                    <input placeholder="Select Type" type="text">
+                    <img src="./Images/icons8-down-arrow-24.png" alt="">
+                </div>
+                <div class="button">
+                    <img src="./Images/icons8-search.svg" alt="">
+                    <button type="button">Find Now</button>
+                </div>
+
             </div>
         </div>
         <!-- nav section end -->
     </header>
     <main>
-
+        <!-- popular tours section starts -->
+        <section>
+            <div class="tour-section-container">
+                <div class="tour-section-text">
+                    <h2>Our Popular Tours</h2>
+                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales
+                        dictumst nec nibh pellentesque.</p>
+                    <ul>
+                        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                            erat at .</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                            suspendisse nullam.</li>
+                        <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    </ul>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus 
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                    <button class="btn-primary" type="button">Read More</button>
+                </div>
+                <div class="tour-section-img">
+                    <img src="./Images/Rectangle4.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- popular tours section end -->
     </main>
     <footer>
 
-    </footer>    
+    </footer>
 </body>
+
 </html>
