footer section completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="travel-name-container">
                 <img src="./Images/Group40071(2).png" alt="">
-                <h3>Awesome <span class="travel-name-color">Travel</span></h3>
+                <h3>Adventure <span class="important">Travel</span></h3>
             </div>
             <div class="menu-item-container">
                 <a href="#"><span class="menu-color">Home</span></a>
@@ -25,11 +25,14 @@
                 <a href="">Contact</a>
             </div>
         </nav>
+        <!-- nav section ends here  -->
+
+
+        <!-- header banner section starts here  -->
         <div class="header-banner-container ">
             <div class="banner-text">
                 <h1>Explore Your Travel</h1>
-                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et <br> odio enim
-                    ac quis sapien urna eu phasellus.</p>
+                <p>Prepare to experience World's rich culture and explore the majestic beauties <br> of In Asia, Europe, America, Australia etc. Plan your trip now!</p>
             </div>
             <div class="banner-btn-item">
                 <input placeholder="Where go" type="text" name="" id="">
@@ -48,7 +51,7 @@
 
             </div>
         </div>
-        <!-- nav section end -->
+        <!-- header banner section ends here -->
     </header>
     <main>
         <!-- popular tours section starts -->
@@ -76,11 +79,12 @@
         </section>
         <!-- popular tours section end -->
 
+
         <!-- Destination section starts here  -->
         <section class="destination-section">
             <div class="destination-text-container">
                 <h2>Choose Your Destination</h2>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+                <p>Expand your travel horizons with new facets! Explore the world by choosing your ideal travel destinations in <br> Maldives, Srilanka, America, Indonesia, India  and more with Advanture Travel.</p>
             </div>
             <div class="destination-img-container">
                <div class="img-row-1">
@@ -656,7 +660,7 @@
                 <section class="news-letter-container">
                     <div class="news-letter-form">
                         <h3>Newsletter</h3>
-                        <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                        <p>Get your daily dose of travel news & tips. Sign <br> up today!</p>
                         <form action="">
                             <input placeholder="Enter your name" type="text" name="" id="">
                             <input placeholder="Enter your email" type="email" name="" id="">
@@ -664,15 +668,40 @@
                         </form>
                     </div>
                     <div class="news-letter-img">
-
+                        <div class="discount-stiker">
+                            <p>Travel.com</p>
+                            <h2>Save up to 70%</h2>
+                        </div>
+                        <img src="./Images/Rectangle(1).png" alt="">
                     </div>
                 </section>
 
                 <!-- newsletter section ends here  -->
     </main>
-    <footer>
 
+    <!-- footer section starts here  -->
+    <footer class="footer-section">
+    <div class="footer-details">
+        <div class="footer-headline">
+            <img src="./Images/Group40071(2).png" alt="">
+            <h3>Adventure <span class="important">Travel</span></h3>
+        </div>
+        <div class="header-description">
+            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo <br> erat maecenas vitae elementum ultricies nullam. </p>
+        </div>
+        <div class="social-icon">
+            <img src="./Images/twitter.svg" alt="">
+            <img src="./Images/facebook-app-symbol.png" alt="">
+            <img src="./Images/instagram.png" alt="">
+            <img src="./Images/github.png" alt="">
+        </div>
+        
+        <div class="all-rights">
+            <p>2017, All Rights Reserved.</p>
+        </div>
+    </div>
     </footer>
+    <!-- footer section ends here  -->
 </body>
 
 </html>
